--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <form>
     <input type="submit" id="btnSubmit" value="Submit">
-    <input type="text" id="msg">
+    <input type="text" id="inputText">
 </form>
 
 
